--- a/warship-studio-website/package.json
+++ b/warship-studio-website/package.json
@@ -9,11 +9,17 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@gsap/react": "^2.1.2",
         "axios": "^1.13.2",
+        "framer-motion": "^12.23.24",
+        "gsap": "^3.13.0",
+        "lenis": "^1.3.15",
         "next": "16.0.3",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "react-icons": "^5.5.0",
+        "react-intersection-observer": "^10.0.0",
+        "react-responsive": "^10.0.1",
         "react-toastify": "^11.0.5"
     },
     "devDependencies": {
