--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,26 @@
-name: Deploy to Hostinger
+name: Deploy to Hostinger VPS
 
 on:
   push:
-    branches: [ main, production ]
+    branches:
+      - main  # Trigger only on pushes to the main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v5
-    - name: Deploy to Hostinger
-      uses: hostinger/deploy-action@v1
-      with:
-        api-key: ${{ secrets.HOSTINGER_API_KEY }}
-        virtual-machine: ${{ vars.HOSTINGER_VM_ID }}
-        project-name: my-awesome-app
-        personal-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Executing remote ssh commands using ssh-action
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd /var/www/my-project
+            git pull origin main
+            npm install --production
+            pm2 restart all
