--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,5 @@ jobs:
             cd /root/Warship-studio-front-end/warship-studio-website
             git pull origin main
             npm install
+            npm run build
             pm2 restart next-js
