--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd /root/Warship-studio-front-end/warship-studio-website
-            git pull origin main
+            git pull
             npm install
             npm run build
             pm2 restart next-js
