--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
           script: |
             cd /root/Warship-studio-front-end/warship-studio-website
             git pull
+            cat ~/.bashrc
             source ~/.bashrc
             nvm use 24.12.0
             npm install
