--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
             source ~/.bashrc
             echo "==================== Showing PATH after sourcing ===================="
             echo $PATH
+            ls -la ~/.nwm
             nvm use 24.12.0
             npm install
             npm run build
