--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,13 @@ jobs:
           script: |
             cd /root/Warship-studio-front-end/warship-studio-website
             git pull
+            export NVM_DIR="$HOME/.nvm"
+            . "$NVM_DIR/nvm.sh"
             echo "==================== Showing PATH after git pull ===================="
             echo $PATH
             source ~/.bashrc
             echo "==================== Showing PATH after sourcing ===================="
             echo $PATH
-            ~/.nvm/nvm.sh use 24.12.0
             npm install
             npm run build
             pm2 restart next-js
